@@ -12,7 +12,7 @@
 
     <groupId>io.swagger.codegen.v3</groupId>
     <artifactId>swagger-codegen-generators</artifactId>
-    <version>1.0.21-SNAPSHOT</version>
+    <version>1.0.35-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <build>
@@ -66,10 +66,12 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>2.22.2</version>
                 <configuration>
                     <argLine>
                         -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar
+                        -XX:+IgnoreUnrecognizedVMOptions
+                        --add-opens=java.base/java.util=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -118,7 +120,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-version}</version>
+                <version>${jackson-databind-version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -252,18 +254,23 @@
         </dependency>
     </dependencies>
     <properties>
-        <swagger-codegen-version>3.0.21-SNAPSHOT</swagger-codegen-version>
-        <swagger-parser-version>2.0.21-SNAPSHOT</swagger-parser-version>
-        <swagger-core-version>2.1.2</swagger-core-version>
-        <jackson-version>2.10.3</jackson-version>
+        <swagger-codegen-version>3.0.35-SNAPSHOT</swagger-codegen-version>
+        <swagger-parser-version>2.0.30</swagger-parser-version>
+        <swagger-core-version>2.1.13</swagger-core-version>
+        <jackson-version>2.13.2</jackson-version>
+        <!--
+          jackson-databind 2.13.2 is still affected by CVE-2020-36518.
+          This version pin for jackson-databind can be removed when bumping jackson to 2.14
+          -->
+        <jackson-databind-version>2.13.2.2</jackson-databind-version>
         <scala-version>2.11.1</scala-version>
         <felix-version>3.3.0</felix-version>
-        <commons-io-version>2.4</commons-io-version>
-        <commons-cli-version>1.2</commons-cli-version>
-        <junit-version>4.8.1</junit-version>
+        <commons-io-version>2.11.0</commons-io-version>
+        <commons-cli-version>1.5.0</commons-cli-version>
+        <junit-version>4.13.1</junit-version>
         <maven-plugin-version>1.0.0</maven-plugin-version>
-        <commons-lang-version>3.4</commons-lang-version>
-        <slf4j-version>1.7.12</slf4j-version>
+        <commons-lang-version>3.12.0</commons-lang-version>
+        <slf4j-version>1.7.35</slf4j-version>
         <scala-maven-plugin-version>3.2.1</scala-maven-plugin-version>
         <testng-version>6.9.6</testng-version>
         <surefire-version>2.19.1</surefire-version>
